# albert-plugin-github

./: CMakeLists.txt  README.md  github.qrc  metadata.json
i18n/: github_de.ts  github_en.ts
src/: configwidget.cpp  configwidget.h  configwidget.ui  github.cpp  github.h  handlers.cpp  handlers.h  items.cpp  items.h  plugin.cpp  plugin.h
